resolve scroll Notes on mobile

--- a/src/components/Workspace/Workspace.module.scss
+++ b/src/components/Workspace/Workspace.module.scss
@@ -11,15 +11,14 @@
 }
 
 .listNotes {
-//   list-style-type: none;
+  list-style-type: none;
   width: 30%;
-  // outline: 2px dotted #00aa00;
+  overflow-y: auto;
   border-right: 5px double #909090;
   padding-inline-start: 5px;
   @media screen and (min-width: 480px) {
     // width: 30%;
     // max-height: 600px;
-    overflow-y: auto;
     padding-inline-start: 20px;
   }
 }
